test: assert min-dispatch hint in runtime api responses